# AIP_Loom

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  worklog.md
.agent/: PATTERN_REGISTRY.md
src/aip_loom/: __init__.py  brief.py  brief_context.py  build.py  checksum.py  chunk_order.py  cli.py  errors.py  frontmatter.py  fs.py  git.py  ids.py  init.py  layout.py  lock.py  output.py  project.py  reconcile_apply.py  reconcile_plan.py  results.py  schemas.py  status.py  tokens.py  transaction.py  update_parser.py  yaml_io.py
tests/: conftest.py  helpers.py  test_acceptance.py  test_brief.py  test_brief_context.py  test_build.py  test_chaos.py  test_checksum.py  test_chunk_order.py  test_cli.py  test_errors.py  test_frontmatter.py  test_fs.py  test_git.py  test_ids.py  test_init.py  test_inspect.py  test_layout.py  test_lock.py  test_output.py  test_project.py  test_reconcile_apply.py  test_reconcile_plan.py  test_results.py  test_schemas.py  test_status.py  test_tokens.py  test_transaction.py  test_update_parser.py  test_yaml_io.py
